--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,10 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "TokenOptions": {
+        "Audience": "cihan@cihan.com",
+        "Issuer": "cihan@cihan.com",
+        "AccessTokenExpiration": "10",
+        "SecurityKey": "mykeymykeymykeymykeymykeymykeymykeymykeymykeymykey"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
